<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.payleven.payment.example.SignatureActivity">

    <TextView
        android:text="@string/signature_confirm_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/signature_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signature"
        android:layout_centerInParent="true"/>
    <LinearLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signature_confirm_button"
            android:onClick="confirmButton"/>

        <Button
            android:id="@+id/decline_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signature_decline_button"
            android:onClick="declineButton"/>
    </LinearLayout>

</RelativeLayout>
