<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/boat_adria" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/boatrental_boat_adria"
            android:layout_marginRight="20dp"/>

        <Spinner
            android:id="@+id/hour_spinner_adria"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/motor_boat" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/boatrental_motorboat"
            android:layout_marginRight="20dp"/>

        <Spinner
            android:id="@+id/hour_spinner_motorboat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sailing_boat"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/boatrental_sailing_boat"
            android:layout_marginRight="20dp"/>
        <Spinner
            android:id="@+id/hour_spinner_sailing_boat"
            android:layout_width="100dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <TextView
            android:textSize="30sp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="Total:"/>
        <TextView
            android:id="@+id/amount_textview"
            android:textSize="30sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="100€"/>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="continuePayment"
        android:text="@string/boatrental_pay_button"/>



</LinearLayout>